# what-llm-can-i-run

./: .gitignore  README.md  pyproject.toml
src/: amd_vram.py  nvidia_vram.py  ram.py
whatllm/: __init__.py  __main__.py  amd_vram.py  cli.py  intel_vram.py  llm_list.py  main.py  nvidia_vram.py  ram.py  vram.py
